--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 spring.datasource.url=jdbc:postgresql://localhost/bookstore
 spring.datasource.username=postgres
 spring.datasource.password=password
-spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.generate-ddl=false
+spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
+
+spring.flyway.enabled=true
